[package]
name = "yuv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"

[dev-dependencies]
conv = "0.3.3"
imageproc = "0.23.0"
rusttype = "0.9.2"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false