[package]
name = "yuvimg"
version = "0.1.1"
edition = "2021"
description = "An yuv image implemention base on <https://github.com/image-rs/image> library. No warranty. Use at your own risk."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"

[dev-dependencies]
conv = "0.3.3"
imageproc = "0.23.0"
rusttype = "0.9.2"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false